[MODFEE-407]. Force tests to use pre-Java 20 date time syntax without NNBSP (U+202F) delimiters